# misis2024s-21-02-sirotkin-s-u

./: .gitignore  CMakeLists.txt
prj.cw/: README.md
prj.cw/src/: CMakeLists.txt  dev.cpp
prj.cw/src/lib/: CMakeLists.txt
prj.cw/src/lib/common/: CMakeLists.txt  common.h
prj.cw/src/lib/detection/: CMakeLists.txt  detection.cpp  detection.h
prj.cw/src/lib/detection/tests/: CMakeLists.txt  test_detection.cpp
prj.cw/src/lib/visualization/: CMakeLists.txt  visualization.cpp  visualization.h
prj.cw/src/main/: CMakeLists.txt  main.cpp
prj.cw/src/main/metrics/: CMakeLists.txt  main.cpp
prj.lab/: CMakeLists.txt
prj.lab/lab01/: CMakeLists.txt  lab01.cpp
prj.lab/lab01/report/: README.md
prj.lab/lab02/: CMakeLists.txt  lab02.cpp
prj.lab/lab02/report/: README.md
prj.lab/lab03/: CMakeLists.txt  lab03.cpp
prj.lab/lab03/report/: README.md
prj.lab/lab04/: CMakeLists.txt  lab04.cpp
prj.lab/lab04/report/: README.md
